--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <br>
 
-<img src= H:\_PHOTOS\Taj_Mahal_B&W.jpg height=150px alt="Taj Mahal">
-<h2><strong> Email: <a href="mcbien1122@gmail.com"></a></strong></h2>
+<img src= images/mandala-glastonbury.jpg height=150px alt="Taj Mahal">
+<p><strong> Email: <a href="mcbien1122@gmail.com"></a></strong></p>
 
 </body>
 
